kubernetes/traefik/traefik.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik
spec:
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - image: public.ecr.aws/docker/library/traefik:v3.1
          name: traefik
          ports:
            - name: "web"
              containerPort: 80
            - name: "dashboard"
              containerPort: 8080
          args:
            - --entrypoints.web.address=:80
            - --api.dashboard=true
            - --providers.kubernetescrd
            - --api.insecure=true
            - --ping=true
          resources:
            requests:
              cpu: "0.4"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  ports:
    - name: web
      nodePort: 30080
      port: 80
      protocol: TCP
      targetPort: web
  selector:
    app: traefik
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
spec:
  ports:
    - name: dashboard
      nodePort: 30082
      port: 8080
      protocol: TCP
      targetPort: dashboard
  selector:
    app: traefik
  type: NodePort
