kubernetes/traefik/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kube-apps
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`<host-here>`)
      services:
        - name: any-api
          port: 8000
