kubernetes/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-name: kube-lb
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-port: "30082"
    alb.ingress.kubernetes.io/healthcheck-path: "/dashboard"
    external-dns.alpha.kubernetes.io/hostname: your-host
    alb.ingress.kubernetes.io/group.name: traefik-group

  name: traefik
spec:
  ingressClassName: alb
  rules:
    - host: your-host
      http:
        paths:
          - backend:
              service:
                name: traefik
                port:
                  name: web
            path: /*
            pathType: ImplementationSpecific
